cmake_minimum_required(VERSION 3.8)
project(HackerRank_C)

set(CMAKE_CXX_STANDARD 11)

add_executable(conditionals intro/conditionals.cpp)
add_executable(data_types intro/data_types.cpp)
add_executable(hello_world intro/hello_world.cpp)
add_executable(input_output intro/input_output.cpp)
add_executable(for_loop intro/for_loop.cpp)
add_executable(functions intro/functions.cpp)
add_executable(pointers intro/pointers.cpp)
add_executable(arrays intro/arrays.cpp)